--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:tabBackground="@drawable/slider_dot_selector"
+            app:tabBackground="@drawable/bg_curve"
             app:tabGravity="center"
             app:tabIndicatorHeight="0dp" />
 
